# soliloquy

./: .bazelignore  .gitignore  ACCEPTANCE_CHECKLIST.md  ACCEPTANCE_CRITERIA.md  BUILD.bazel  BUILD.gn  Cargo.toml  DEVELOPER_GUIDE.md  DRIVER_HAL_CHANGES.md  FLATLAND_INTEGRATION_SUMMARY.md  HAL_TRANSLATION_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_NOTES.md  INTEGRATION_SUMMARY.md  MANIFEST_VALIDATION_SUMMARY.md  MODULE.bazel  NEXT_STEPS.md  TESTING_GETTING_STARTED.md  TEST_ACCEPTANCE_CHECKLIST.md  TEST_COVERAGE_ADDITIONS.md  TEST_FRAMEWORK_CHECKLIST.md  TEST_FRAMEWORK_SUMMARY.md  TICKET_COMPLETION.md  TICKET_COMPLETION_REPORT.md  TICKET_COMPLETION_SUMMARY.md  TICKET_VM_SUMMARY.md  VERIFICATION_CHECKLIST.md  VM_TRANSLATION_REPORT.md  WORKSPACE.bazel  ideas.md  readme.md  verify_c2v_setup.sh  verify_hal_v_translation.sh  verify_ipc_build.sh  verify_test_framework.sh  verify_vm_translation.sh
.cargo/: config.toml
.github/: copilot-instructions.md
backend/: .env.example  README.md  auth.v  config.v  cupboard.v  display.v  main.v  search.v  sync.v  tableware.v  zircon.v
boards/arm64/qemu/: BUILD.bazel  BUILD.gn  board.gni
boards/arm64/soliloquy/: BUILD.bazel  BUILD.gn  board.gni  board_config.gni  soliloquy-display-info.json  soliloquy-ethernet-info.json  soliloquy-gpio-info.json  soliloquy-hid-info.json  soliloquy-mmc-info.json  soliloquy-platform-info.json  soliloquy-sdio-info.json
boards/arm64/soliloquy-qemu/: BUILD.gn  board.gni
boards/arm64/soliloquy/dts/: BUILD.bazel
boards/arm64/soliloquy/meta/: soliloquy-display.cml  soliloquy-ethernet.cml  soliloquy-gpio.cml  soliloquy-hid.cml  soliloquy-mmc.cml  soliloquy-platform.cml  soliloquy-sdio.cml
boards/arm64/soliloquy/meta/bind/: soliloquy-display.bind  soliloquy-ethernet.bind  soliloquy-gpio.bind  soliloquy-hid.bind  soliloquy-mmc.bind  soliloquy-platform.bind  soliloquy-sdio.bind
boards/arm64/soliloquy/src/: soliloquy-display.cc  soliloquy-ethernet.cc  soliloquy-gpio.cc  soliloquy-hid.cc  soliloquy-mmc.cc  soliloquy-sdio.cc  soliloquy.cc  soliloquy.h
boards/arm64/soliloquy/uboot/: BUILD.bazel  README.md  boot.cmd
docs/: ARCHITECTURE.md  BUILD_AND_BOOT.md  C2V_TOOLING_SUMMARY.md  DOCUMENTATION_ORGANIZATION.md  DRIVER_STATUS.md  FLASH_COMMANDS.md  HAL_TRANSLATION_SUMMARY.md  HEADLESS_MODE.md  INDEX.md  PRODUCT_CONFIG.md  README.md  build.md  component_manifest.md  contibuting.md  dev_guide.md  driver_porting.md  servo_integration.md  testing.md  zircon_c2v.md
docs/architecture/: README.md  quick_reference_manifest.md
docs/guides/: README.md  dev_guide.md  getting_started_with_testing.md  servo_integration.md  tools_reference.md
docs/testing/: README.md  test_coverage_broadening.md  testing.md
docs/translations/: README.md  VM_INTEGRATION_GUIDE.md  VM_TRANSLATION_FILES.md  c2v_translations.md  ipc.md
docs/tutorials/: README.md  getting_started.md
docs/ui/: flatland_bindings.md  flatland_integration.md
drivers/common/soliloquy_hal/: BUILD.bazel  BUILD.gn  clock_reset.cc  clock_reset.h  firmware.cc  firmware.h  mmio.cc  mmio.h  sdio.cc  sdio.h
drivers/common/soliloquy_hal/tests/: BUILD.gn  mmio_tests.cc
drivers/gpio/soliloquy_gpio/: BUILD.gn  gpio.cc  gpio.h
drivers/wifi/aic8800/: BUILD.gn  COMMIT_SUMMARY.md  README.md  aic8800.cc  aic8800.h  aic8800_sdio.cc
drivers/wifi/aic8800/tests/: BUILD.gn  init_test.cc
extensions/: BUILD.bazel  v_toolchain.bzl
product/: BUILD.gn  soliloquy.gni
products/: soliloquy.arm64.gni  soliloquy_packages.gni
products/soliloquy/: BUILD.gn
scripts/: README.md  build.sh  dev.sh  display_test.sh
scripts/lib/: common.sh
scripts/zircon/: display_detect.sh  utils.sh
src/shell/: BUILD.bazel  BUILD.gn  Cargo.toml  fidl_integration_tests.rs  integration_tests.rs  lib.rs  main.rs  main_simple.rs  main_test.rs  sdk_test.cc  servo_embedder.rs  v8_runtime.rs  v8_test.rs  view_provider_test.rs  zircon_window.rs
src/shell/meta/: soliloquy_shell.cml
test/: BUILD.gn  EXAMPLES.md  QUICKSTART.md  README.md
test/.cargo/: config.toml
test/components/: soliloquy_shell_test.cml
test/support/: BUILD.bazel  BUILD.gn  Cargo.toml  lib.rs
test/support/src/: assertions.rs
test/support/src/mocks/: flatland.rs  mod.rs  touch_source.rs  view_provider.rs
test/vm/: BUILD.bazel  BUILD.gn  README.md  run_tests.sh  simple_vm_test.c  vm_test.cc
tools/build_manager/: ARCHITECTURE.md  FEATURES.md  QUICKSTART.md  README.md  install.sh
tools/build_manager/build_core/: Cargo.toml
tools/build_manager/build_core/src/: analytics.rs  config.rs  error.rs  executor.rs  lib.rs  models.rs  module_manager.rs  utils.rs
tools/build_manager/build_core/src/build_systems/: bazel.rs  cargo.rs  gn.rs  mod.rs
tools/build_manager/build_manager_cli/: Cargo.toml
tools/build_manager/build_manager_cli/src/: main.rs
tools/build_manager/build_manager_cli/src/commands/: analytics.rs  build.rs  env.rs  mod.rs  module.rs  profile.rs  test.rs  tools.rs
tools/scripts/: README.md  verify_c2v_setup.sh  verify_hal_v_translation.sh  verify_ipc_build.sh  verify_test_framework.sh  verify_vm_translation.sh
tools/soliloquy/: build.sh  build_bazel.sh  build_qemu.sh  build_sdk.sh  build_ui.sh  c2v_pipeline.sh  debug.sh  dev_ui.sh  download_fuchsia_qemu.sh  env.sh  flash.sh  gen_fidl_bindings.sh  run_qemu.sh  setup.sh  setup_fedora_orb.sh  setup_sdk.sh  ssh_build.sh  start.sh  test.sh  test_manifest_structure.sh  (+1 more)
ui/desktop/: .gitignore  BUILD.gn  README.md  package.json  pnpm-lock.yaml  svelte.config.js
ui/desktop/meta/: soliloquy-desktop.cml
ui/desktop/src/: app.css
ui/desktop/src/lib/api/: search.ts  tableware.ts
ui/desktop/src/lib/components/: CommandBar.svelte  CommandPalette.svelte  SearchBar.svelte  SearchCarousel.svelte  ShortcutsProvider.svelte  TabBar.svelte  WorkspaceIndicator.svelte  index.ts
ui/desktop/src/lib/stores/: browser.ts  system.ts
ui/desktop/src/lib/system/: actions.ts  shortcuts.ts
ui/desktop/src/lib/utils/: fuzzy.ts
ui/desktop/src/routes/: +layout.svelte  +layout.ts  +page.svelte
ui/desktop/src/routes/dashboard/: +page.svelte  +page.ts
(+32 files in other folders)
