# Root BUILD file for Soliloquy

package(default_visibility = ["//visibility:public"])

# Convenience target to build everything
filegroup(
    name = "all",
    srcs = [
        "//src/shell:soliloquy_shell",
        "//drivers/common/soliloquy_hal",
    ],
)

# c2v tooling smoke test
alias(
    name = "c2v_tooling_smoke",
    actual = "//build:c2v_tooling_smoke",
)
