# Copyright 2025 The Soliloquy Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

# Root build file for Soliloquy OS

group("default") {
  deps = [
    "//src/shell:soliloquy_shell",
    "//drivers/common/soliloquy_hal",
    "//drivers/wifi/aic8800:aic8800",
    "//drivers/gpio/soliloquy_gpio:soliloquy_gpio",
    "//boards/arm64/soliloquy:soliloquy-package",
  ]
}
