# Root build file for Soliloquy

group("default") {
  deps = [
    "//src/shell:soliloquy_shell",
    "//drivers/common/soliloquy_hal",
    "//drivers/wifi/aic8800:aic8800",
    "//drivers/gpio/soliloquy_gpio:soliloquy_gpio",
    "//boards/arm64/soliloquy:soliloquy-package",
  ]
}

group("c2v_tooling_smoke") {
  deps = [ "//build:c2v_tooling_smoke" ]
}
