# Copyright 2024 Soliloquy Authors
# SPDX-License-Identifier: Apache-2.0
#
# Root build file for Soliloquy OS

import("//build/board.gni")

# ============================================================================
# Default Target Group
# ============================================================================

group("default") {
  testonly = true
  deps = [
    # Shell and UI
    "//src/shell:soliloquy_shell",
    
    # Hardware abstraction
    "//drivers/common/soliloquy_hal",
    
    # WiFi driver
    "//drivers/wifi/aic8800:aic8800",
    
    # GPIO driver
    "//drivers/gpio/soliloquy_gpio:soliloquy_gpio",
    
    # Board drivers
    "//boards/arm64/soliloquy:soliloquy-drivers",
    
    # V language bindings
    "//third_party/zircon_v:all",
  ]
}

# ============================================================================
# Product Targets
# ============================================================================

group("soliloquy") {
  testonly = true
  deps = [
    "//products/soliloquy:soliloquy",
    "//boards/arm64/soliloquy:drivers",
  ]
}

group("soliloquy_headless") {
  testonly = true
  deps = [
    "//products/soliloquy:soliloquy_headless",
    "//boards/arm64/soliloquy:drivers",
  ]
}

group("soliloquy_qemu") {
  testonly = true
  deps = [
    "//products/soliloquy:soliloquy_qemu",
    "//boards/arm64/soliloquy-qemu:soliloquy-qemu",
  ]
}

# ============================================================================
# Board Targets
# ============================================================================

group("boards") {
  testonly = true
  deps = [
    "//boards/arm64/soliloquy:soliloquy",
    "//boards/arm64/soliloquy-qemu:soliloquy-qemu",
  ]
}

# ============================================================================
# Driver Targets
# ============================================================================

group("drivers") {
  testonly = true
  deps = [
    "//drivers/common/soliloquy_hal",
    "//drivers/wifi/aic8800:aic8800",
    "//drivers/gpio/soliloquy_gpio:soliloquy_gpio",
    "//boards/arm64/soliloquy:drivers",
  ]
}

# ============================================================================
# V Language Translation Targets
# ============================================================================

group("zircon_v") {
  deps = [
    "//third_party/zircon_v/vm:zircon_v_vm",
    "//third_party/zircon_v/ipc:zircon_v_ipc",
    "//third_party/zircon_v/scenic:zircon_v_scenic",
  ]
}

group("c2v_tooling_smoke") {
  deps = [ "//build:c2v_tooling_smoke" ]
}

# ============================================================================
# Test Targets
# ============================================================================

group("tests") {
  testonly = true
  deps = [
    "//src/shell:tests",
    "//test:all_tests",
    "//test/vm:vm_tests",
    "//boards/arm64/soliloquy:tests",
  ]
}

# ============================================================================
# Documentation Targets
# ============================================================================

group("docs") {
  deps = [
    "//docs:all_docs",
  ]
}
