import("//build/components.gni")
import("soliloquy.gni")

group("soliloquy") {
  testonly = false
  deps = []
  
  # Core Soliloquy packages
  deps += soliloquy_base_packages
  deps += soliloquy_universe_packages
}

group("soliloquy_base") {
  testonly = false
  deps = soliloquy_base_packages
}

group("soliloquy_universe") {
  testonly = false
  deps = soliloquy_universe_packages
}
