# Soliloquy Product Package Configuration
# Defines base and universe packages for the Soliloquy OS product

# Base packages are always included in the system image
soliloquy_base_packages = [
  # Core shell and UI
  "//src/shell:soliloquy_shell",
  
  # Board and platform drivers
  "//boards/arm64/soliloquy:soliloquy-package",
  "//drivers/common/soliloquy_hal",
  "//drivers/gpio/soliloquy_gpio:soliloquy_gpio",
  
  # WiFi connectivity
  "//drivers/wifi/aic8800:aic8800",
]

# Universe packages are available for dynamic installation
soliloquy_universe_packages = [
  # FIDL UI bindings
  "//gen/fidl/fuchsia_ui_composition",
  "//gen/fidl/fuchsia_ui_views",
  "//gen/fidl/fuchsia_input",
  
  # Test infrastructure (when available)
  # "//test/support",
]
