# Copyright 2024 Soliloquy Authors
# SPDX-License-Identifier: Apache-2.0
#
# Soliloquy OS Product Configuration
# Minimal web-UI-only Fuchsia product for Radxa Cubie A5E (Allwinner A527)
#
# This product is optimized for:
# - Servo browser engine (with rusty_v8 swapped for V8)
# - Svelte 5 UI framework
# - Minimal system footprint (no PCI/USB/audio/full GPU/Vulkan)
# - Web-first desktop experience
#
# Usage:
#   fx set soliloquy.arm64 --with //src/shell:soliloquy_shell
#   fx build
#   fx flash

#  ________  ________  ___       ___  ___       ________  ________  ___  ___  ___    ___ 
# |\   ____\|\   __  \|\  \     |\  \|\  \     |\   __  \|\   __  \|\  \|\  \|\  \  /  /|
# \ \  \___|\ \  \|\  \ \  \    \ \  \ \  \    \ \  \|\  \ \  \|\  \ \  \\\  \ \  \/  / /
#  \ \_____  \ \  \\\  \ \  \    \ \  \ \  \    \ \  \\\  \ \  \\\  \ \  \\\  \ \    / / 
#   \|____|\  \ \  \\\  \ \  \____\ \  \ \  \____\ \  \\\  \ \  \\\  \ \  \\\  \ \   / /  
#     ____\_\  \ \_______\ \_______\ \__\ \_______\ \_______\ \_____  \ \_______\ \_\/_/   
#    |\_________\|_______|\|_______|\|__|\|_______|\|_______|\|___| \__\|_______|\|__|    
#    \|_________|                                                   \|__|                 

has_board = false  # Board config is separate

# Target ARM64 for Allwinner A527 (Cortex-A55)
target_cpu = "arm64"

# Product assembly configuration
fuchsia_product_assembly_config_label = "//products/soliloquy"
zedboot_product_assembly_config_label = "//products/zedboot"

# Board configuration - use our custom Soliloquy board
board_configuration_label = "//boards/arm64/soliloquy"
bazel_product_bundle_board = "soliloquy-arm64"

board_name = "soliloquy-arm64"
board_description = "Soliloquy OS for Radxa Cubie A5E (Allwinner A527)"

# Physical device, not emulator
board_is_emu = false

# Partition configuration
partitions_config_label = "//boards/arm64/soliloquy:partitions"

# Storage configuration - minimal footprint
# 2GB blobfs is plenty for a web-only system
blobfs_capacity = 2147483648  # 2048 MiB
max_blob_contents_size = 1879048192  # 1792 MiB - leaves room for updates

# Flash partition layout
zircon_a_partition = "boot_a"
zircon_b_partition = "boot_b"
zircon_r_partition = "boot_r"
vbmeta_a_partition = "vbmeta_a"
vbmeta_b_partition = "vbmeta_b"
vbmeta_r_partition = "vbmeta_r"
fvm_partition = "super"
fxfs_partition = "super"
active_partition = "a"
fastboot_product = "soliloquy"

# Bootloader configuration
use_gigaboot = false  # Use U-Boot for Allwinner
use_vbmeta = true
avb_key = "//boards/arm64/soliloquy:avb_key"
avb_atx_metadata = "//boards/arm64/soliloquy:avb_atx_metadata"

# Generate FVM for fastboot flashing
assembly_generate_fvm_fastboot = true

# Skip UEFI disk - Allwinner uses U-Boot
product_skip_uefi_disk = true
build_uefi_disk = false

# Enable unified scheduler for better performance
experimental_unified_scheduler_enabled = true

# Soliloquy-specific package configuration
import("//products/soliloquy_packages.gni")
