# Copyright 2024 Soliloquy Authors
# SPDX-License-Identifier: Apache-2.0
#
# Soliloquy Package Configuration
# Defines base, cache, and universe packages for the Soliloquy OS product

# ============================================================================
# BASE PACKAGES - Always included in system image
# ============================================================================

soliloquy_base_packages = [
  # ----------------------------------------------------------------------------
  # Core Shell and UI
  # ----------------------------------------------------------------------------
  {
    package_target = "//src/shell:soliloquy_shell"
  },
  
  # ----------------------------------------------------------------------------
  # Soliloquy Desktop (Svelte 5 UI)
  # ----------------------------------------------------------------------------
  {
    package_target = "//ui/desktop:soliloquy_desktop"
  },
  
  # ----------------------------------------------------------------------------
  # Platform Drivers (Allwinner A527 / Radxa Cubie A5E)
  # ----------------------------------------------------------------------------
  {
    package_target = "//boards/arm64/soliloquy:soliloquy-drivers"
  },
  
  # ----------------------------------------------------------------------------
  # Display Subsystem (DRM-based, no full GPU/Vulkan)
  # ----------------------------------------------------------------------------
  {
    package_target = "//boards/arm64/soliloquy/drivers:display-driver"
  },
  
  # ----------------------------------------------------------------------------
  # Input Subsystem (HID)
  # ----------------------------------------------------------------------------
  {
    package_target = "//boards/arm64/soliloquy/drivers:hid-driver"
  },
  
  # ----------------------------------------------------------------------------
  # Storage (eMMC/SD via MMC controller)
  # ----------------------------------------------------------------------------
  {
    package_target = "//boards/arm64/soliloquy/drivers:mmc-driver"
  },
  
  # ----------------------------------------------------------------------------
  # Networking
  # ----------------------------------------------------------------------------
  {
    package_target = "//boards/arm64/soliloquy/drivers:ethernet-driver"
  },
  {
    package_target = "//drivers/wifi/aic8800:aic8800"
  },
  
  # ----------------------------------------------------------------------------
  # V-based Zircon Kernel Subsystems
  # ----------------------------------------------------------------------------
  {
    package_target = "//third_party/zircon_v/vm:zircon_v_vm"
  },
  {
    package_target = "//third_party/zircon_v/ipc:zircon_v_ipc"
  },
  {
    package_target = "//third_party/zircon_v/scenic:zircon_v_scenic"
  },
]

# ============================================================================
# CACHE PACKAGES - Downloaded on first use, can be evicted
# ============================================================================

soliloquy_cache_packages = [
  # Servo browser engine with V8 integration
  {
    package_target = "//vendor/servo:servo_pkg"
  },
]

# ============================================================================
# UNIVERSE PACKAGES - Available for dynamic installation
# ============================================================================

soliloquy_universe_packages = [
  # FIDL UI bindings (for component development)
  "//gen/fidl/fuchsia_ui_composition",
  "//gen/fidl/fuchsia_ui_views",
  "//gen/fidl/fuchsia_ui_input",
  "//gen/fidl/fuchsia_ui_app",
  
  # WLAN softmac for WiFi driver
  "//gen/fidl/fuchsia_wlan_softmac",
  
  # Developer tools (optional)
  "//src/developer/debug/debug_agent",
]

# ============================================================================
# BOOTFS PACKAGES - Included in ZBI for early boot
# ============================================================================

soliloquy_bootfs_packages = [
  # Minimal fshost for storage mounting
  "//src/storage/fshost:bootfs_pkg",
  
  # Network services for development
  "//src/bringup/bin/netsvc:bootfs_pkg",
]

# ============================================================================
# EXCLUDED PACKAGES - Explicitly not included
# ============================================================================
# 
# The following are NOT included to minimize footprint:
# - PCI subsystem (not used on Allwinner)
# - USB host stack (not needed for web-only)
# - Full audio stack (web audio via browser)
# - Vulkan/GPU compute (software rendering)
# - Bluetooth (WiFi only for now)
# - Full fonts collection (minimal web fonts)
# - Development tools (minimal)
