# Copyright 2025 The Soliloquy Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

group("tests") {
  testonly = true
  deps = [
    "//drivers/common/soliloquy_hal/tests:soliloquy_hal_mmio_tests",
    "//drivers/wifi/aic8800/tests:aic8800_init_tests",
  ]
}
