# Copyright 2024 Soliloquy Authors
# SPDX-License-Identifier: Apache-2.0
#
# Soliloquy OS Product Assembly Configuration
# Minimal web-UI-only product for ARM64 SBCs

import("//build/assembly/bootfs_files_for_assembly.gni")
import("//build/assembly/product_assembly_configuration.gni")
import("//build/info/info.gni")
import("//products/soliloquy_packages.gni")

assert(
    is_fuchsia,
    "Product definitions and assemblies should only be defined in the fuchsia toolchain")

# ============================================================================
# Platform Configuration
# ============================================================================
#
# Minimal platform config optimized for web-UI-only Soliloquy OS
# Based on 'minimal' product but with UI support

_platform_configuration_base = {
  # Feature level: utility (above bootstrap, below standard)
  # Provides basic system services without full desktop features
  feature_set_level = "utility"
  
  # Engineering build type for development
  build_type = "eng"
  
  # Kernel configuration
  kernel = {
    # Memory management
    oom = {
      behavior = "job_kill"  # Kill jobs on OOM, don't reboot
    }
    
    # Enable new scheduler features
    scheduler_enable_new_wakeup_accounting = true
    
    # ARM64-specific: enable hardware ASID for performance
    arm64_hw_watchdog = {
      enabled = false  # Disable for development
    }
  }
  
  # Development support
  development_support = {
    include_netsvc = true  # Network services for development
    include_sl4f = false   # No need for Scripting Layer for Fuchsia
    
    tools = {
      connectivity = {
        enable_networking = true
        enable_wlan = true
        enable_thread = false  # No Thread/OpenThread
      }
    }
  }
  
  # Storage configuration
  storage = {
    mutable_storage_garbage_collection = true
    filesystems = {
      image_name = "soliloquy"
      volume = {
        fvm = {
          # Minimal blob storage for web assets
          blob = {
          }
          # F2FS for mutable data (better for flash storage)
          data = {
            data_filesystem_format = "f2fs"
          }
        }
      }
    }
  }
  
  # UI configuration - essential for Soliloquy
  ui = {
    # Input devices we support
    supported_input_devices = [
      "touchscreen",
      "button",
    ]
    
    # Use Flatland compositor (not Scenic GFX)
    use_flatland = true
    
    # Display configuration
    display = {
      # Software rendering (no GPU driver needed)
      use_software_rendering = true
    }
  }
  
  # No Bluetooth
  bluetooth = {
    type = "disabled"
  }
  
  # No full media stack
  media = {
    enable_codecs = false
    enable_sessions = false
  }
  
  # No settings UI (web-based config instead)
  setui = {
    use_setui = false
  }
  
  # Fonts - minimal set for web
  fonts = {
    font_collection = "empty-font-collection"
  }
  
  # Power management - simple for SBC
  power = {
    enable_non_hermetic_testing = false
  }
}

# ============================================================================
# Product Assembly: soliloquy (main product)
# ============================================================================

product_assembly_configuration("soliloquy") {
  testonly = true
  
  platform = {
    forward_variables_from(_platform_configuration_base, "*")
  }
  
  product = {
    build_info = default_product_build_info
  }
  
  # Base packages from soliloquy_packages.gni
  base_packages = soliloquy_base_packages
  
  # Cache packages
  cache_packages = soliloquy_cache_packages
  
  # Bootfs packages for early boot
  bootfs_packages = soliloquy_bootfs_packages
  
  # Version info
  version = build_info_version
  
  deps = [
    "//build/info:build_info_files",
    ":bootfs_soliloquy_files",
  ]
}

# ============================================================================
# Product Assembly: soliloquy_headless (no display)
# ============================================================================

product_assembly_configuration("soliloquy_headless") {
  testonly = true
  
  platform = {
    forward_variables_from(_platform_configuration_base, "*")
    
    # Override: no UI
    ui = {
      supported_input_devices = []
    }
    
    # Bootstrap level for headless
    feature_set_level = "bootstrap"
  }
  
  product = {
    build_info = default_product_build_info
  }
  
  # Minimal packages for headless mode
  base_packages = [
    {
      package_target = "//backend:soliloquy_backend"
    },
    {
      package_target = "//boards/arm64/soliloquy/drivers:mmc-driver"
    },
    {
      package_target = "//boards/arm64/soliloquy/drivers:ethernet-driver"
    },
    {
      package_target = "//drivers/wifi/aic8800:aic8800"
    },
  ]
  
  bootfs_packages = soliloquy_bootfs_packages
  version = build_info_version
  
  deps = [
    "//build/info:build_info_files",
  ]
}

# ============================================================================
# Product Assembly: soliloquy_qemu (for QEMU testing)
# ============================================================================

product_assembly_configuration("soliloquy_qemu") {
  testonly = true
  
  platform = {
    forward_variables_from(_platform_configuration_base, "*")
    
    # Override: QEMU-specific settings
    kernel = {
      oom = {
        behavior = "job_kill"
      }
      scheduler_enable_new_wakeup_accounting = true
    }
  }
  
  product = {
    build_info = default_product_build_info
  }
  
  base_packages = soliloquy_base_packages
  cache_packages = soliloquy_cache_packages
  bootfs_packages = soliloquy_bootfs_packages
  
  version = build_info_version
  
  deps = [
    "//build/info:build_info_files",
    ":bootfs_soliloquy_files",
  ]
}

# ============================================================================
# Bootfs Files
# ============================================================================

bootfs_files_for_assembly("bootfs_soliloquy_files") {
  testonly = true
  deps = [
    # Shell launcher for startup
    "//src/shell:soliloquy_shell_launcher",
    
    # Display detection utility
    "//backend:display_detect",
  ]
}

# ============================================================================
# Test Configuration
# ============================================================================

product_assembly_configuration("soliloquy_with_tests") {
  testonly = true
  
  platform = {
    forward_variables_from(_platform_configuration_base, "*")
    development_support = {
      include_netsvc = true
      include_bootstrap_testing_framework = true
    }
  }
  
  product = {
    build_info = default_product_build_info
  }
  
  base_packages = soliloquy_base_packages
  cache_packages = soliloquy_cache_packages
  
  bootfs_packages = soliloquy_bootfs_packages + [
    "//src/shell:tests",
    "//test/support:soliloquy_test_support",
  ]
  
  bootfs_files_labels = [ ":bootfs_test_files" ]
  version = build_info_version
  
  deps = [
    "//build/info:build_info_files",
  ]
}

bootfs_files_for_assembly("bootfs_test_files") {
  testonly = true
  deps = [
    "//src/testing/runtests",
    "//src/shell:tests",
  ]
}
