# Soliloquy Shell - Bazel Build

load("@rules_rust//rust:defs.bzl", "rust_binary")
load("@rules_cc//cc:defs.bzl", "cc_binary")

# SDK integration test (C++)
cc_binary(
    name = "sdk_test",
    srcs = ["sdk_test.cc"],
    copts = ["-I$(BINDIR)/external/soliloquy/sdk/arch/arm64/sysroot/include"],
    deps = [
        "//sdk:zircon_lib",
    ],
)

# Simplified shell for testing build system
rust_binary(
    name = "soliloquy_shell_simple",
    srcs = ["main_simple.rs"],
    edition = "2021",
)

# Full shell with Fuchsia dependencies and V8 integration
rust_binary(
    name = "soliloquy_shell",
    srcs = [
        "main.rs",
        "zircon_window.rs",
        "servo_embedder.rs",
        "v8_runtime.rs",
    ],
    edition = "2021",
    deps = [
        "//gen/fidl/fuchsia_ui_composition",
        "//gen/fidl/fuchsia_ui_views",
        "//gen/fidl/fuchsia_input",
        # TODO: Add rusty_v8 dependency via cargo
        # TODO: Add Servo dependency
    ],
    # Add rustc flags for V8 linking if needed
    rustc_flags = [
        # Add any V8-specific flags here
    ],
)
