# Copyright 2025 The Soliloquy Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test")

rust_library(
    name = "soliloquy_test_support",
    srcs = [
        "lib.rs",
        "src/mocks/mod.rs",
        "src/mocks/flatland.rs",
        "src/mocks/touch_source.rs",
        "src/mocks/view_provider.rs",
        "src/assertions.rs",
    ],
    edition = "2021",
    visibility = ["//visibility:public"],
    deps = [
        "@crates//:futures",
        "@crates//:log",
    ],
)

rust_test(
    name = "soliloquy_test_support_test",
    crate = ":soliloquy_test_support",
    edition = "2021",
    deps = [
        "@crates//:tokio-test",
    ],
)
