# Copyright 2024 Soliloquy Authors
# SPDX-License-Identifier: Apache-2.0
#
# Soliloquy Desktop UI - Svelte 5 + SvelteKit based desktop environment

import("//build/components.gni")
import("//build/web/web_bundle.gni")

# ============================================================================
# Desktop UI Bundle
# ============================================================================

# Build the Svelte desktop UI as a web bundle
web_bundle("soliloquy_desktop_bundle") {
  name = "soliloquy_desktop"
  
  # Source directory containing the SvelteKit project
  source_dir = "."
  
  # Build command (pnpm build generates static files)
  build_command = "pnpm install && pnpm build"
  
  # Output directory from SvelteKit build
  output_dir = "build"
  
  # Entry point
  entry_point = "index.html"
}

# ============================================================================
# Desktop Package
# ============================================================================

fuchsia_package("soliloquy_desktop") {
  package_name = "soliloquy-desktop"
  
  deps = [
    ":soliloquy_desktop_bundle",
  ]
  
  # Include web assets in package
  resources = [
    {
      path = rebase_path("build", root_build_dir)
      dest = "data/desktop"
    },
  ]
}

# ============================================================================
# Component Manifest
# ============================================================================

fuchsia_component("soliloquy_desktop_component") {
  component_name = "soliloquy-desktop"
  manifest = "meta/soliloquy-desktop.cml"
  deps = [ ":soliloquy_desktop" ]
}

# ============================================================================
# Development Target
# ============================================================================

group("desktop") {
  testonly = true
  deps = [
    ":soliloquy_desktop",
  ]
}

# ============================================================================
# Tests
# ============================================================================

group("tests") {
  testonly = true
  deps = [
    # Add UI tests when available
  ]
}
