# Copyright 2024 Soliloquy Authors
# SPDX-License-Identifier: Apache-2.0
#
# QEMU ARM64 Board Build Configuration (Bazel)

package(default_visibility = ["//visibility:public"])

# Board configuration files
filegroup(
    name = "qemu_board_config",
    srcs = [
        "board.gni",
        "BUILD.gn",
    ],
)

# Export board configuration for SDK builds
exports_files([
    "board.gni",
])
