# Copyright 2024 Soliloquy Authors
# SPDX-License-Identifier: Apache-2.0
#
# QEMU ARM64 Board Build Configuration

import("//build/board.gni")
import("//boards/arm64/qemu/board.gni")

group("qemu") {
  testonly = true
  deps = [
    ":platform-driver",
    ":virtio-blk-driver",
    ":virtio-gpu-driver",
    ":virtio-input-driver",
    ":virtio-net-driver",
  ]
}

# Platform driver stubs - these reference Fuchsia's built-in virtio drivers
group("platform-driver") {
  deps = [
    "//src/devices/board/drivers/qemu-arm64",
  ]
}

group("virtio-blk-driver") {
  deps = [
    "//src/devices/block/drivers/virtio",
  ]
}

group("virtio-gpu-driver") {
  deps = [
    "//src/graphics/display/drivers/virtio-gpu",
  ]
}

group("virtio-net-driver") {
  deps = [
    "//src/connectivity/ethernet/drivers/virtio",
  ]
}

group("virtio-input-driver") {
  deps = [
    "//src/ui/input/drivers/virtio",
  ]
}
