# Copyright 2024 Soliloquy Authors
# SPDX-License-Identifier: Apache-2.0
#
# QEMU ARM64 Virtual Board Configuration for Soliloquy
# Emulates a generic ARM64 virt machine compatible with A527 software

import("//build/board.gni")

declare_args() {
  # QEMU-specific arguments
  
  # Number of virtual CPUs
  qemu_cpus = 4
  
  # RAM size in MB
  qemu_ram_mb = 2048
  
  # Enable virtio-gpu
  qemu_enable_gpu = true
  
  # Enable virtio-net
  qemu_enable_net = true
  
  # Enable serial console
  qemu_serial = true
}

# ============================================================================
# Board Configuration
# ============================================================================

board_name = "qemu-arm64"
board_description = "QEMU ARM64 Virtual Machine for Soliloquy"

# Virtual SoC Configuration
soc_vendor = "QEMU"
soc_model = "virt"
soc_family = "arm64"

# ============================================================================
# CPU Configuration
# ============================================================================

# QEMU virt: Configurable Cortex-A72 (close to A55 behavior)
cpu_arch = "arm64"
cpu_cores = 4
cpu_model = "cortex-a72"  # QEMU default, behaves similarly to A55
cpu_max_freq_mhz = 0      # Virtual, no frequency limit

# ============================================================================
# Memory Configuration
# ============================================================================

ram_size_mb = 2048
ram_type = "virtual"

# QEMU virt machine memory map (simplified)
mmio_regions = [
  {
    name = "gic"
    base = "0x08000000"
    size = "0x020000"
    description = "GIC Distributor"
  },
  {
    name = "uart0"
    base = "0x09000000"
    size = "0x1000"
    description = "PL011 UART"
  },
  {
    name = "rtc"
    base = "0x09010000"
    size = "0x1000"
    description = "PL031 RTC"
  },
  {
    name = "gpio"
    base = "0x09030000"
    size = "0x1000"
    description = "PL061 GPIO"
  },
  {
    name = "virtio0"
    base = "0x0a000000"
    size = "0x200"
    description = "VirtIO MMIO 0"
  },
  {
    name = "virtio1"
    base = "0x0a000200"
    size = "0x200"
    description = "VirtIO MMIO 1"
  },
  {
    name = "virtio2"
    base = "0x0a000400"
    size = "0x200"
    description = "VirtIO MMIO 2"
  },
  {
    name = "virtio3"
    base = "0x0a000600"
    size = "0x200"
    description = "VirtIO MMIO 3"
  },
  {
    name = "pcie"
    base = "0x10000000"
    size = "0x2eff0000"
    description = "PCIe ECAM"
  },
  {
    name = "ram"
    base = "0x40000000"
    size = "0x80000000"
    description = "Main RAM"
  },
]

# IRQ assignments (GIC SPI)
irq_assignments = {
  uart0 = 33
  rtc = 34
  gpio = 35
  virtio0 = 48
  virtio1 = 49
  virtio2 = 50
  virtio3 = 51
}

# ============================================================================
# Virtual Peripheral Configuration
# ============================================================================

# VirtIO Network
has_wifi = false  # Use virtio-net instead
has_ethernet = true
ethernet_type = "virtio"

# VirtIO GPU
has_gpu = true
gpu_model = "virtio-gpu"
gpu_variant = "pci"

# VirtIO Display
has_display = true
display_engine = "virtio-gpu"
display_outputs = [ "virtual" ]

# VirtIO Block Storage
has_emmc = false
has_sd = false
has_virtio_blk = true

# No physical USB in QEMU (use virtio)
has_usb = false

# ============================================================================
# Driver Package Configuration
# ============================================================================

qemu_platform_drivers = [
  "//boards/arm64/qemu:platform-driver",
]

qemu_storage_drivers = [
  "//boards/arm64/qemu:virtio-blk-driver",
]

qemu_display_drivers = [
  "//boards/arm64/qemu:virtio-gpu-driver",
]

qemu_network_drivers = [
  "//boards/arm64/qemu:virtio-net-driver",
]

qemu_input_drivers = [
  "//boards/arm64/qemu:virtio-input-driver",
]

# All drivers for QEMU
qemu_all_drivers = 
    qemu_platform_drivers +
    qemu_storage_drivers +
    qemu_display_drivers +
    qemu_network_drivers +
    qemu_input_drivers

# ============================================================================
# Boot Configuration
# ============================================================================

# Kernel command line for QEMU
kernel_cmdline = [
  "kernel.serial=legacy",
  "kernel.halt-on-panic=true",  # Halt so we can see panic output
  "devmgr.bind-eager=all",
  "driver_manager.driver_host_crash_policy=restart-driver-host",
  "console.shell=true",
]

# QEMU PL011 UART configuration
uart_base = "0x09000000"
uart_irq = 33
uart_clock = 24000000
uart_baud = 115200

# ============================================================================
# QEMU Launch Parameters (informational)
# ============================================================================

# These are used by the launch script
qemu_machine = "virt,gic-version=3"
qemu_cpu = "cortex-a72"
qemu_memory = "2G"
qemu_smp = "4"
