# Copyright 2024 Soliloquy Authors
# SPDX-License-Identifier: Apache-2.0
#
# QEMU build configuration for Soliloquy OS

import("//build/board.gni")
import("//boards/arm64/soliloquy-qemu/board.gni")

group("soliloquy-qemu") {
  testonly = true
  deps = [
    "//src/shell:soliloquy_shell",
    "//src/devices/block/drivers/virtio:virtio_block",
    "//src/connectivity/network/drivers/virtio:virtio_netdevice",
  ]
}

group("tests") {
  testonly = true
  deps = [
    "//src/shell:tests",
    "//test/vm:vm_tests",
  ]
}
