# Copyright 2024 Soliloquy Authors
# SPDX-License-Identifier: Apache-2.0
#
# QEMU configuration for Soliloquy OS testing
# Uses ARM64 virt machine with virtio devices

import("//build/board.gni")

# ============================================================================
# QEMU Board Configuration
# ============================================================================

board_name = "soliloquy-qemu"
board_description = "Soliloquy OS on QEMU ARM64"

# Inherit from standard qemu-arm64
import("//boards/arm64/qemu/qemu.gni")

# Override with Soliloquy-specific settings
target_cpu = "arm64"
board_is_emu = true
board_is_phys = false

# ============================================================================
# QEMU Machine Settings
# ============================================================================

qemu_machine = "virt"
qemu_cpu = "cortex-a53"
qemu_memory = "2048"  # 2GB RAM

# VirtIO devices
qemu_drives = [
  {
    id = "root"
    file = "out/default/obj/images/fvm.blk"
    format = "raw"
    if = "none"
  },
]

qemu_devices = [
  # VirtIO block device for FVM
  "virtio-blk-pci,drive=root",
  
  # VirtIO network
  "virtio-net-pci,netdev=net0",
  
  # VirtIO input (keyboard/mouse)
  "virtio-keyboard-pci",
  "virtio-mouse-pci",
  
  # VirtIO GPU for display
  "virtio-gpu-pci",
]

qemu_netdev = "user,id=net0,hostfwd=tcp::8022-:22,hostfwd=tcp::2345-:2345"

# ============================================================================
# QEMU Display
# ============================================================================

# Use SDL display for testing
qemu_display = "sdl"

# Or headless for CI
# qemu_display = "none"

# ============================================================================
# Serial Console
# ============================================================================

# Enable serial console
qemu_serial = "stdio"

# ============================================================================
# Driver Configuration
# ============================================================================

# QEMU uses virtio drivers, not board-specific ones
board_driver_package_labels = [
  # Virtio drivers from Fuchsia
  "//src/devices/block/drivers/virtio:virtio_block",
  "//src/devices/bus/drivers/pci:bus-pci",
  "//src/connectivity/network/drivers/virtio:virtio_netdevice",
  
  # Soliloquy shell
  "//src/shell:soliloquy_shell",
]

board_bootfs_labels = [
  "//src/shell:soliloquy_shell_launcher",
]

board_zedboot_labels = []
board_recovery_labels = []

# ============================================================================
# Kernel Configuration
# ============================================================================

board_kernel_cmdline = [
  "kernel.serial=legacy",
  "kernel.halt-on-panic=true",
  "devmgr.bind-eager=all",
  "virtcon.keymap=us",
]

# ============================================================================
# Test Configuration  
# ============================================================================

# Enable test framework in QEMU builds
qemu_enable_tests = true

board_test_labels = [
  "//src/shell:tests",
  "//test/support:soliloquy_test_support",
  "//test/vm:vm_tests",
]
