load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "soliloquy_driver",
    srcs = [
        "src/soliloquy-ethernet.cc",
        "src/soliloquy-gpio.cc",
        "src/soliloquy-sdio.cc",
        "src/soliloquy.cc",
    ],
    deps = [
        "//third_party/zircon_v/ipc:zircon_v_ipc",
    ],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "soliloquy-package",
    srcs = [":soliloquy_driver"],
    visibility = ["//visibility:public"],
)
